<resources>
    <string name="app_name">GYM DAC</string>

    <!-- nombres de menús principales -->
    <string name="title_main_menu">Menú principal</string>
    <string name="title_clients">Clientes</string>
    <string name="title_trainers">Entrenadores</string>
    <string name="title_services">Servicios</string>
    <string name="title_memberships">Membresías</string>
    <string name="title_manage_clients">Administrar clientes</string>
    <string name="title_manage_trainers">Administrar entrenadores</string>
    <string name="title_manage_services">Administrar servicios</string>
    <string name="title_manage_memberships">Administrar membresías</string>
    <string name="title_locations">Ubicacion del gimnasio</string>
    <string name="title_manage_locations">Administrar Ubicaciones</string>
    <string name="title_manage_image">Administrar imagenes</string>

    <!-- titulos de las pantallas -->

    <string name="title_select_trainers">Seleccionar Entrenadores</string>
    <string name="title_select_clients">Seleccionar Clientes</string>

    <!-- Botones -->
    <string name="btn_add">Agregar</string>
    <string name="btn_edit">Editar</string>
    <string name="btn_delete">Eliminar</string>
    <string name="btn_view_details">Ver detalles</string>
    <string name="btn_save">Guardar</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="btn_exit">Salir</string>
    <string name="btn_reset">Reiniciar</string>

    <!-- Campos de cliente -->
    <string name="field_id">Cedula</string>
    <string name="field_name">Nombre</string>
    <string name="field_number">Numero</string>
    <string name="field_gender">Genero</string>
    <string name="field_age">Edad</string>
    <string name="field_height">Altura</string>
    <string name="field_weight">Peso</string>
    <string name="header_membership">Membresia</string>
    <string name="header_service">Servicio</string>
    <string name="title_select_services">Seleccionar Servicios</string>

    <!--Entrenadores , mensajes de errores o exitoso-->

    <string name="toast_complete_fields">Debe completar todos los campos</string>
    <string name="toast_updated">Actualizado correctamente</string>
    <string name="toast_registered">Registrado correctamente</string>
    <string name="toast_id_exists">La cédula ya está registrada</string>

    <string name="toast_select_trainer">Debe seleccionar un Entrenador</string>
    <string name="toast_deleted_success">Eliminado correctamente</string>
    <string name="toast_name_not_found">No se encontró ese nombre</string>
    <string name="toast_missing_name">Falta el nombre para eliminar</string>

    <!-- Clientes , mensajes de error o exito-->
    <string name="toast_no_client_selected">No se ha seleccionado ningún cliente</string>
    <string name="toast_client_deleted">Cliente eliminado</string>
    <string name="toast_client_not_found">No se encontró ese nombre</string>
    <string name="toast_name_empty">El nombre está vacío</string>

    <string name="toast_client_updated">Cliente actualizado correctamente</string>
    <string name="toast_fields_required">Por favor complete todos los campos</string>
    <string name="toast_client_registered">Cliente registrado correctamente</string>

    <string name="toast_select_membership_first">Seleccione una membresía primero</string>
    <string name="toast_membership_deleted">Membresía eliminada</string>
    <string name="toast_membership_delete_error">Error al eliminar la membresía</string>
    <string name="field_client">Cliente</string>

    <!-- hint de la barra de busqueda-->
    <string name="hint_search_client">Buscar Cliente</string>
    <string name="hint_search_trainer">Buscar Entrenador</string>
    <string name="hint_search_service">Buscar Servicio</string>
    <string name="hint_search_membership">Buscar Membresía</string>
    <string name="toast_no_service_selected">Debe seleccionar un servicio primero</string>

    <!-- titulos campo de busqueda de administrar membresias-->
    <string name="adm_membresias_cliente_cedu">Cliente (Cedula)</string>
    <string name="adm_membresias_cliente_nombre">Nombre del cliente</string>
    <string name="adm_membresias_entrenador_cedu">Entrenador (Cedula)</string>
    <string name="adm_membresias_entrenador_nombre">Nombre del entrenador</string>
    <string name="adm_membresias_tipo">Tipo de membresía</string>

    <string name="adm_membresias_servicio">Servicio</string>

    <string name="adm_membresias_codigo_servicio">Código del servicio</string>
    <string name="adm_membresias_nombre_servicio">Nombre del servicio</string>
    <string name="adm_membresias_precio">Precio</string>
    <string name="adm_membresias_precio_total">Precio total</string>
    <string name="toast_fields_service_required">Por favor, introduzca un nombre y un precio</string>
    <string name="toast_type_required">Debe seleccionar un tipo de membresía</string>

    <!-- Campos de ubicacion-->
    <string name="field_location_name">Nombre</string>
    <string name="field_location_latitude">Latitud</string>
    <string name="field_location_longitude">Longitud</string>

    <!-- Ubicacion , mensajes de error o exito-->
    <string name="toast_location_registered">Ubicación registrada correctamente</string>
    <string name="toast_location_updated">Ubicación actualizada correctamente</string>
    <string name="toast_location_deleted">Ubicación eliminada correctamente</string>
    <string name="toast_select_location_for_edit">Seleccione una ubicación para editar</string>
    <string name="toast_select_location_for_delete">Seleccione una ubicación para eliminar</string>
    <string name="toast_location_not_found">No se encontró esa ubicación</string>
    <string name="toast_location_name_empty">El nombre de la ubicación no puede estar vacío</string>
    <string name="toast_location_name_validate">El nombre de la ubicación ya existe</string>
    <string name="toast_complete_location_fields">Debe completar todos los campos de ubicación</string>

<!--    Audio , mensajes de error o exito-->
    <string name="header_audio">Administrador de Audio</string>
    <string name="start_recording">Iniciar Grabación</string>
    <string name="stop_recording">Detener Grabación</string>
    <string name="play_audio">Reproducir Audio</string>
    <string name="stop_playing">Detener Audio</string>
    <string name="save_audio">Guardar Audio</string>
    <string name="toast_start_recordig">La grabación comenzó</string>
    <string name="toast_start_playing">Reproduciendo audio</string>
    <string name="toast_stop_playing">Reproducción detenida</string>
    <string name="toast_error_save_audio">Error al guardar el audio</string>
    <string name="toast_stop_recordig">Grabación exitosa</string>
    <string name="btn_play">Reproducir</string>
    <string name="btn_record">Grabar Audio</string>
    <string name="toast_audio_reading_error">Error al convertir el audio</string>
    <string name="toast_no_audio">No hay audio cargado</string>

<!--    imagen , mensajes de error o exito-->
    <string name="image_take_photo">Tomar foto</string>
    <string name="image_avatar">Imagen del entrenador</string>
</resources>