<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DFF0D8"
    android:backgroundTintMode="src_over"
    android:hapticFeedbackEnabled="true">

    <ScrollView
        android:id="@+id/scrollFormulario"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <!-- Título -->
            <TextView
                android:id="@+id/txtTitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:text="@string/title_manage_clients"
                android:textSize="24sp"
                android:textStyle="bold" />

            <!-- Avatar -->
            <ImageView
                android:id="@+id/imgClientes"
                android:layout_width="113dp"
                android:layout_height="106dp"
                android:layout_gravity="center"
                android:layout_marginBottom="24dp"
                android:scaleType="centerCrop"
                android:src="@drawable/user_h" />

            <!-- Campo: Cédula -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/field_id"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtCedula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:background="@drawable/edittext_custom"
                android:inputType="number" />

            <!-- Campo: Nombre -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/field_name"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:background="@drawable/edittext_custom"
                android:inputType="textPersonName" />

            <!-- Campo: Número -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/field_number"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtNumero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:background="@drawable/edittext_custom"
                android:inputType="phone" />

            <!-- Campo: Género -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/field_gender"
                android:textStyle="bold" />

            <!-- Campo: Edad -->

            <Spinner
                android:id="@+id/spGenero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:background="@drawable/edittext_custom"
                 />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/field_age"

                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtEdad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:background="@drawable/edittext_custom"
                android:inputType="number" />

            <!-- Campo: Altura -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/field_height"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtAltura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:background="@drawable/edittext_custom"
                android:inputType="numberDecimal" />

            <!-- Campo: Peso -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/field_weight"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtPeso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_custom"
                android:inputType="numberDecimal" />

            <!-- Botones -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnGuardar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="#4CAF50"
                    android:onClick="BtnGuardar"
                    android:text="@string/btn_save"
                    android:textColor="#000000"
                    app:icon="@drawable/guardar"
                    app:iconGravity="textTop"
                    app:iconSize="20dp"
                    app:iconTint="#000000" />

                <Button
                    android:id="@+id/btnSalir"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="#009688"
                    android:onClick="reiniciar"
                    android:text="@string/btn_reset"
                    android:textColor="#000000"
                    app:icon="@drawable/reiniciar"
                    app:iconGravity="textTop"
                    app:iconSize="20dp"
                    app:iconTint="#000000" />

                <Button
                    android:id="@+id/btnCancelar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="#D33232"
                    android:onClick="cancelar"
                    android:text="@string/btn_cancel"
                    android:textColor="#000000"
                    app:icon="@drawable/cancelar"
                    app:iconGravity="textTop"
                    app:iconSize="20dp"
                    app:iconTint="#000000" />


            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>